# home-project-billing

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  schemas.py  settings.py
app/api/: dependencies.py
app/api/routers/: account.py
app/db/: crud.py  database.py  models.py
app/sql_app/: crud.py  database.py  models.py
