[tool.poetry]
name = "home-project-billing"
version = "0.1.0"
description = ""
authors = ["Sveta Afanaseva <s.afanasieva@tinkoff.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
psycopg2-binary = "^2.9.6"
asyncpg = "^0.27.0"
SQLAlchemy = "^2.0.13"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pylint = "^2.17.4"
pytest = "^7.3.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = ["missing-docstring"]

[flake8]
max-line-length = 120
